--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#0564bd" />
     <meta name="author" content="Ahmed Zougari" />
     <meta name="co-author" content="Chaka Mofokeng" />
-    <link rel="icon" type="image/png" href="./img/favicon.png" />
+<!--    <link rel="icon" type="image/png" href="./img/favicon.png" />-->
     <meta
       name="keywords"
       content="chaka, mofokeng, chakamofokeng, mofokengchaka, chakarosky, rosky, freelancer, website, programmer, developer, site"
